--- a/TopMenusReport/cproReport.html
+++ b/TopMenusReport/cproReport.html
@@ -598,7 +598,11 @@
         $('.ui-togglesubmitabletablerichselector-layer').toggle();
     });
 
+    var myChart = echarts.init(document.getElementById('myEcharts'));
+
     var pageSize = 20, pageCount = 0, page = 1;
+    var option = {};
+    var showVc = false, showClk = false, showCtr = true, showEcpm = false, showIcm = false;
 
     var url = location.href;
     var params = url.split('?');
@@ -656,6 +660,8 @@
                 $('#incomeSum').html(item.incomeSum == '.00' ? '--' : item.incomeSum);
                 $('#pageViewCountSum').html(item.pageViewCountSum ? item.pageViewCountSum : '0');
                 $('#viewCountSum').html(item.viewCountSum ? item.viewCountSum : '0');
+
+                $("body",parent.document).find('.loading-box').hide();
             },
             error: function(err) {
                 // alert('请求失败');
@@ -685,7 +691,7 @@
                 $('#incomeAverage').html(item.incomeAverage == '.00' ? '0.00' : item.incomeAverage);
                 $('#pageViewCountAverage').html(item.pageViewCountAverage);
                 $('#viewCountAverage').html(item.viewCountAverage);
-                console.log(item);
+                // console.log(item);
             },
             error: function(err) {
                 alert('请求失败');
@@ -720,29 +726,33 @@
                 var pageViewCountSumList = new Array;
                 var viewCountSumList = new Array;
                 var timeList = new Array;
-                var nameList = new Array;
+                var itemName = new Array;
 
                 var html = '';
                 var tbody = '';
                 for(var i = 0; i < item.length; i++) {
                     clickCountSumList.push(item[i].viewCountSum);
-                    console.log(item[i].viewCountSum);
+                    // console.log(item[i].viewCountSum);
                     ctrList.push(item[i].ctr);
                     ecpmList.push(item[i].ecpm);
-                    incomeSumLit.push(item[i].incomeSum);
+                    incomeSumLit.push(item[i].incomeSum.split(',').join('') * 1);
                     pageViewCountSumList.push(item[i].pageViewCountSumList);
                     viewCountSumList.push(item[i].viewCountSumList);
                     timeList.push(item[i].dateFormated);
-                    nameList.push(item[i].name);
+                    itemName.push(item[i].name);
+
                     html += '<div id="ctrl-report-list-table-row0" class="ui-table-row skin-noGrid-table-row ui-table-row-even skin-noGrid-table-row-even" data-index="0">'+
                             '<table cellpadding="0" cellspacing="0" width="100%" data-control-table="table">'+
                             '<tbody>'+
                             '<tr>'+
-                            '<td style="width:20%; id="ctrl-report-list-table-cell0-0" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:139px;" data-control-table="table" data-row="0" data-col="0"><div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-first skin-noGrid-table-cell-text-first"><span id="ctrl-report-list-table-cell-textfield-0-0">'+
-                            '<a data-command="detail" data-command-args="u3404286|资讯猜你喜欢20：12组图-淘新闻">'+
+                            '<td id="ctrl-report-list-table-cell0-0" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break ui-table-cell-sorted skin-noGrid-table-cell-sorted"'+
+                            'style="width:20%;" data-control-table="table" data-row="0" data-col="0">'+
+                            '<div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-first skin-noGrid-table-cell-text-first">'+
+                            '<span id="ctrl-report-list-table-cell-textfield-0-0">'+
                             item[i].name+
-                            '</a>'+
-                            '</span></div></td>'+
+                            '</span>'+
+                            '</div>'+
+                            '</td>'+
                             '<td id="ctrl-report-list-table-cell0-1" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break"'+
                             'style="width:13%;" data-control-table="table" data-row="0" data-col="1">'+
                             '<div class="ui-table-cell-text skin-noGrid-table-cell-text">'+
@@ -824,10 +834,9 @@
                 $('#todayTable').html(html);
                 $('#reportTbody').html(tbody);
 
-                console.log(clickCountSumList);
+                // console.log(clickCountSumList);
                 // 基于准备好的dom，初始化echarts实例
-                var myChart = echarts.init(document.getElementById('myEcharts'));
-
+console.log(clickCountSumList, ctrList, ecpmList, incomeSumLit, viewCountSumList, itemName);
                 option = {
                     tooltip : {
                         trigger: 'axis',
@@ -843,7 +852,15 @@
                         show: false
                     },
                     legend: {
-                        data:['代码位展现量','页面展现量','点击量','点击率','eCPM','收入']
+                        show: false,
+                        data:['代码位展现量','点击量','点击率','eCPM','收入'],
+                        selected: {
+                            '代码位展现量': showVc,
+                            '点击量': showClk,
+                            '点击率': showCtr,
+                            'eCPM': showEcpm,
+                            '收入': showIcm
+                        },
                     },
                     toolbox: {
                         show: false,
@@ -860,58 +877,100 @@
                     xAxis : [
                         {
                             type : 'category',
-                            boundaryGap : false,
-                            data : ['周一','周二','周三','周四','周五','周六','周日']
+                            boundaryGap : true,
+                            data : itemName,
+                            splitLine:{show: true},//是否去除网格线
                         }
                     ],
                     yAxis : [
                         {
-                            type : 'value'
+                            type : 'value',
                         }
                     ],
                     series : [
                         {
                             name:'代码位展现量',
-                            type:'line',
-                            stack: '总量',
-                            areaStyle: {},
-                            data: viewCountSumList
+                            type:'bar',
+                            /*stack: '总量',
+                            areaStyle: {},*/
+                            data: viewCountSumList,
+                            itemStyle: {
+                                background: '#4db6ac',
+                                color: '#4db6ac'
+                            },
                         },
                         {
-                            name:'页面展现量',
-                            type:'line',
-                            stack: '总量',
-                            areaStyle: {},
-                            data: pageViewCountSumList
+                            name:'收入',
+                            type:'bar',
+                            /*stack: '总量',
+                            areaStyle: {},*/
+                            data: incomeSumLit,
+                            itemStyle: {
+                                background: 'rgb(253, 34, 34)',
+                                color: 'rgb(253, 34, 34)'
+                            },
                         },
                         {
                             name:'点击量',
-                            type:'line',
-                            stack: '总量',
-                            areaStyle: {},
-                            data: clickCountSumList
+                            type:'bar',
+                            /*stack: '总量',
+                            areaStyle: {},*/
+                            data: clickCountSumList,
+                            itemStyle: {
+                                background: '#acdd96',
+                                color: '#acdd96'
+                            },
                         },
                         {
                             name:'点击率',
-                            type:'line',
-                            stack: '总量',
-                            areaStyle: {normal: {}},
-                            data: ctrList
+                            type:'bar',
+                            /*stack: '总量',
+                            areaStyle: {normal: {}},*/
+                            data: ctrList,
+                            itemStyle: {
+                                background: '#ffd155',
+                                color: '#ffd155'
+                            },
                         },
                         {
                             name:'eCPM',
-                            type:'line',
-                            stack: '总量',
+                            type:'bar',
+                            /*stack: '总量',
                             label: {
                                 normal: {
                                     show: true,
                                     position: 'top'
                                 }
                             },
-                            areaStyle: {normal: {}},
-                            data: ecpmList
+                            areaStyle: {normal: {}},*/
+                            data: ecpmList,
+                            itemStyle: {
+                                background: '#acc1fe',
+                                color: '#acc1fe'
+                            },
                         }
-                    ]
+                        /*{
+                            data: [2.96, 1.21, 1.07, 2.2, 1.07, 2.94, 2.63, 0.53, 3.44, 1.44, 0.67, 1.04, 3.5, 0.98, 1.84, 5.64, 0.43, 2.83, 1.71, 0.56],
+                            type: 'bar'
+                        },
+                        {
+                            data: [95829, 283239, 255281, 159583, 134722, 75578, 94087, 111584, 68593, 90012, 262647, 71816, 11672, 89444, 90975, 12937, 148802, 23670, 56999, 138215],
+                            type: 'bar'
+                        },
+                        {
+                            data: ["95,829", "283,239", "255,281", "159,583", "134,722", "75,578", "94,087", "111,584", "68,593", "90,012", "262,647", "71,816", "11,672", "89,444", "90,975", "12,937", "148,802", "23,670", "56,999", "138,215"],
+                            type: 'bar'
+                        },
+                        {
+                            data:  [31.00, 10.00, 6.28, 10.00, 10.00, 16.55, 13.01, 10.00, 15.77, 12.00, 3.58, 12.87, 77.59, 10.00, 9.00, 59.32, 5.00, 31.07, 12.26, 5.00],
+                            type: 'bar'
+                        }*/
+                    ],
+                    /*dataset: {
+                        source: [
+                            ['product', '代码位展现量','页面展现量','点击量','点击率','eCPM','收入'],
+                        ]
+                    }*/
                 };
 
                 pageCount = Math.ceil(item.length / pageSize);
@@ -998,7 +1057,65 @@
         $('#ctrl-report-list-ctrl-report-list-pager-select-text').text(pageSize);
         $('.ui-select-item-selected').removeClass('ui-select-item-selected');
         $(this).addClass('ui-select-item-selected');
-    })
+    });
+
+    $('#ctrl-report-chart-chart-serie-selector-serie-body label').on('click', function() {
+        $('.ui-boxgroup-wrapper-checked.skin-flat-boxgroup-wrapper-checked').removeClass('ui-boxgroup-wrapper-checked skin-flat-boxgroup-wrapper-checked');
+        $(this).addClass('ui-boxgroup-wrapper-checked skin-flat-boxgroup-wrapper-checked');
+        // showVc = false, showClk = false, showCtr = true, showEcpm = false, showIcm = false;
+        var value = $(this).find('input').val();console.log(value);
+        switch(value) {
+            case 'ecpm':
+                showEcpm = true;
+                showVc = false;
+                showClk = false;
+                showCtr = false;
+                showIcm = false;
+            break;
+            case 'income':
+                showIcm = true;
+                showVc = false;
+                showClk = false;
+                showCtr = false;
+                showEcpm = false;
+            break;
+            case 'clickRatio':
+                showCtr = true;
+                showVc = false;
+                showClk = false;
+                showIcm = false;
+                showEcpm = false;
+            break;
+            case 'click':
+                showClk = true;
+                showVc = false;
+                showCtr = false;
+                showIcm = false;
+                showEcpm = false;
+            break;
+            case 'adPositionView':
+                showVc = true;
+                showClk = false;
+                showCtr = false;
+                showIcm = false;
+                showEcpm = false;
+            break;
+        }
+        console.log(option);
+        option = {
+            legend: {
+                data:['代码位展现量','点击量','点击率','eCPM','收入'],
+                selected: {
+                    '代码位展现量': showVc,
+                    '点击量': showClk,
+                    '点击率': showCtr,
+                    'eCPM': showEcpm,
+                    '收入': showIcm
+                }
+            },
+        };
+        myChart.setOption(option);
+    });
     // require(
     //     ['common/ioc'],
     //     function (ioc) {
